enable sortability, enable reset button, fix alignment with float

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+#reset {
+    border: 2px solid black;
+    background-color: white;
+    font: 1em Futura;
+}
+
 .box-container {
     display: block;
 }
@@ -15,8 +21,22 @@
 
 .draggable-box {
     border: 3px solid black;
+    margin: 5px;
     background-color: orange;
-    display: inline-block;
+    color: white;
+    font-family: Futura, sans-serif;
+    font-size: 5em;
+    float: left;
     width: 150px;
     height: 150px;
+    text-align: center;
+    line-height: 150px;
+}
+
+.active {
+    background-color: blue;
+}
+
+.drop-hover {
+    background-color: rgba(0,0,255,.3);
 }
